// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobStreet Header passes through optional props 1`] = `
<Header
  LogoComponent={[Function]}
  actionTrayProps={
    Object {
      "showSavedJobs": false,
    }
  }
  activeTab="ACTIVE_TAB_HOME"
  brandStyles={null}
  country="my"
  language="en"
  links={
    Array [
      Object {
        "ItemIcon": [Function],
        "title": "Home",
        "url": "https://jobstreet.com.my",
      },
      Object {
        "ItemIcon": [Function],
        "title": "MyJobStreet",
        "url": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Company Profiles",
        "url": "https://jobstreet.com.my/en/companies/",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Career Insights",
        "url": "https://jobstreet.com.my/en/career-insights",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Education",
        "url": "https://jobstreet.com.my/en/career-insights",
      },
    ]
  }
  locales={
    Array [
      Object {
        "ItemIcon": [Function],
        "country": "sg",
        "language": "en",
        "title": "Singapore (English)",
        "url": "https://www.jobstreet.com.sg/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "my",
        "language": "en",
        "title": "Malaysia (English)",
        "url": "https://www.jobstreet.com.my/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "ph",
        "language": "en",
        "title": "Philiphines (English)",
        "url": "https://www.jobstreet.com.ph/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "en",
        "title": "Indonesia (English)",
        "url": "https://www.jobstreet.co.id/en/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "id",
        "title": "Indonesia (Bahasa)",
        "url": "https://www.jobstreet.co.id/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "vn",
        "language": "vi",
        "title": "Việt Nam (Tiếng Việt)",
        "url": "https://www.jobstreet.vn/",
      },
    ]
  }
  loginAvailable={false}
  logoProps={
    Object {
      "country": "my",
    }
  }
  messages={
    Object {
      "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
      "footer.aboutLinkText": "About Us",
      "footer.copyright": "Copyright © {year} JobStreet.com",
      "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
      "footer.feedbackLinkText": "Send Feedback",
      "footer.helpLink": "https://jobstreet.com.my/en/user/",
      "footer.helpLinkText": "Help",
      "footer.link": "https://www.jobstreet.com",
      "footer.linkText": "JobStreet International",
      "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
      "footer.privacyLinkText": "Privacy Policy",
      "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
      "footer.profilesLinkText": "Work With Us",
      "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
      "footer.safeLinkText": "Safe Job Search Guide",
      "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
      "footer.siteMapLinkText": "Site Map",
      "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
      "footer.termsLinkText": "Term of Use",
      "header.careerInsightsTitle": "Career Insights",
      "header.careerInsightsUrl": "https://jobstreet.com.my/en/career-insights",
      "header.classifiedJobsTitle": "Classified Jobs",
      "header.classifiedJobsUrl": "https://jobstreet.com.my/en/job-search/classified-ads.php",
      "header.companyProfilesTitle": "Company Profiles",
      "header.companyProfilesUrl": "https://jobstreet.com.my/en/companies/",
      "header.educationTitle": "Education",
      "header.educationUrl": "https://jobstreet.com.my/en/career-insights",
      "header.employerLinkPrefix": "Looking to hire? Check out our ",
      "header.employerSiteTitle": "Employer Site",
      "header.employerSiteUrl": "\${baseUrlWithLanguage}/cms/employer",
      "header.freshGradJobsTitle": "Fresh Grad Jobs",
      "header.freshGradJobsUrl": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
      "header.homeTitle": "Home",
      "header.homeUrl": "https://jobstreet.com.my",
      "header.myAccountTitle": "My Account",
      "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
      "header.myJobStreetTitle": "MyJobStreet",
      "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      "header.overseasJobsTitle": "Overseas Jobs",
      "header.overseasJobsUrl": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
      "menu.backToMenu": "Back to Menu",
      "menu.countryAndLanguage": "Country & Language",
      "menu.jobSeekerHeader": "JOB SEEKER",
      "menu.more": "More",
      "menu.moreHeader": "MORE",
      "menu.settingsHeader": "SETTINGS",
    }
  }
  more={
    Array [
      Object {
        "title": "Overseas Jobs",
        "url": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
      },
      Object {
        "title": "Fresh Grad Jobs",
        "url": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
      },
      Object {
        "title": "Classified Jobs",
        "url": "https://jobstreet.com.my/en/job-search/classified-ads.php",
      },
    ]
  }
/>
`;

exports[`JobStreet Header renders with default props 1`] = `
<Header
  LogoComponent={[Function]}
  activeTab="ACTIVE_TAB_HOME"
  brandStyles={null}
  country="my"
  language="en"
  links={
    Array [
      Object {
        "ItemIcon": [Function],
        "title": "Home",
        "url": "https://jobstreet.com.my",
      },
      Object {
        "ItemIcon": [Function],
        "title": "MyJobStreet",
        "url": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Company Profiles",
        "url": "https://jobstreet.com.my/en/companies/",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Career Insights",
        "url": "https://jobstreet.com.my/en/career-insights",
      },
      Object {
        "ItemIcon": [Function],
        "title": "Education",
        "url": "https://jobstreet.com.my/en/career-insights",
      },
    ]
  }
  locales={
    Array [
      Object {
        "ItemIcon": [Function],
        "country": "sg",
        "language": "en",
        "title": "Singapore (English)",
        "url": "https://www.jobstreet.com.sg/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "my",
        "language": "en",
        "title": "Malaysia (English)",
        "url": "https://www.jobstreet.com.my/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "ph",
        "language": "en",
        "title": "Philiphines (English)",
        "url": "https://www.jobstreet.com.ph/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "en",
        "title": "Indonesia (English)",
        "url": "https://www.jobstreet.co.id/en/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "id",
        "language": "id",
        "title": "Indonesia (Bahasa)",
        "url": "https://www.jobstreet.co.id/",
      },
      Object {
        "ItemIcon": [Function],
        "country": "vn",
        "language": "vi",
        "title": "Việt Nam (Tiếng Việt)",
        "url": "https://www.jobstreet.vn/",
      },
    ]
  }
  loginAvailable={false}
  logoProps={
    Object {
      "country": "my",
    }
  }
  messages={
    Object {
      "footer.aboutLink": "https://jobstreet.com.my/en/about-us/",
      "footer.aboutLinkText": "About Us",
      "footer.copyright": "Copyright © {year} JobStreet.com",
      "footer.feedbackLink": "https://myjobstreet.jobstreet.com.my/home/feedback.php?site=my&sub=feedback",
      "footer.feedbackLinkText": "Send Feedback",
      "footer.helpLink": "https://jobstreet.com.my/en/user/",
      "footer.helpLinkText": "Help",
      "footer.link": "https://www.jobstreet.com",
      "footer.linkText": "JobStreet International",
      "footer.privacyLink": "https://jobstreet.com.my/en/about-us/privacy-policy/",
      "footer.privacyLinkText": "Privacy Policy",
      "footer.profilesLink": "https://jobstreet.com.my/career/JobStreet.htm",
      "footer.profilesLinkText": "Work With Us",
      "footer.safeLink": "https://jobstreet.com.my/en/about-us/safe-job-search-guide/",
      "footer.safeLinkText": "Safe Job Search Guide",
      "footer.siteMapLink": "https://jobstreet.com.my/sitemap.htm",
      "footer.siteMapLinkText": "Site Map",
      "footer.termsLink": "https://jobstreet.com.my/en/about-us/terms-of-use/",
      "footer.termsLinkText": "Term of Use",
      "header.careerInsightsTitle": "Career Insights",
      "header.careerInsightsUrl": "https://jobstreet.com.my/en/career-insights",
      "header.classifiedJobsTitle": "Classified Jobs",
      "header.classifiedJobsUrl": "https://jobstreet.com.my/en/job-search/classified-ads.php",
      "header.companyProfilesTitle": "Company Profiles",
      "header.companyProfilesUrl": "https://jobstreet.com.my/en/companies/",
      "header.educationTitle": "Education",
      "header.educationUrl": "https://jobstreet.com.my/en/career-insights",
      "header.employerLinkPrefix": "Looking to hire? Check out our ",
      "header.employerSiteTitle": "Employer Site",
      "header.employerSiteUrl": "\${baseUrlWithLanguage}/cms/employer",
      "header.freshGradJobsTitle": "Fresh Grad Jobs",
      "header.freshGradJobsUrl": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
      "header.homeTitle": "Home",
      "header.homeUrl": "https://jobstreet.com.my",
      "header.myAccountTitle": "My Account",
      "header.myAccountUrl": "https://myjobstreet.jobstreet.com.my/resume/preview-resume.php?",
      "header.myJobStreetTitle": "MyJobStreet",
      "header.myJobStreetUrl": "https://myjobstreet.jobstreet.com.my/home/login.php?site=my",
      "header.overseasJobsTitle": "Overseas Jobs",
      "header.overseasJobsUrl": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
      "menu.backToMenu": "Back to Menu",
      "menu.countryAndLanguage": "Country & Language",
      "menu.jobSeekerHeader": "JOB SEEKER",
      "menu.more": "More",
      "menu.moreHeader": "MORE",
      "menu.settingsHeader": "SETTINGS",
    }
  }
  more={
    Array [
      Object {
        "title": "Overseas Jobs",
        "url": "https://jobstreet.com.my/en/job-search/browse/find-overseas-jobs",
      },
      Object {
        "title": "Fresh Grad Jobs",
        "url": "https://jobstreet.com.my/en/job-search/campus/job-vacancy.php",
      },
      Object {
        "title": "Classified Jobs",
        "url": "https://jobstreet.com.my/en/job-search/classified-ads.php",
      },
    ]
  }
/>
`;
